# dev_pubsub_emulator

./: .gitignore  README.md  config.yaml  pyproject.toml
scripts/: generate_protos.sh
src/dev_pubsub/: __main__.py  broker.py  cli.py  config.py  filter.py  grpc_server.py  publisher_servicer.py  subscriber_servicer.py  web_server.py
src/dev_pubsub/static/: index.html
tests/: test_filter.py
