[project]
name = "dev-pubsub"
version = "0.1.0"
description = "Local Google Cloud Pub/Sub emulator for development"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "grpcio>=1.68.0",
    "grpcio-tools>=1.68.0",
    "googleapis-common-protos>=1.66.0",
    "protobuf>=5.29.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
]

[project.scripts]
dev-pubsub = "dev_pubsub.__main__:main"
dev-pubsub-cli = "dev_pubsub.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_pubsub"]
